# rust_llm_stock

./: .env  .gitignore  1  3DAY_PREDICTION_IMPLEMENTATION.md  ADJUSTED_DAILY_RENAME_SUMMARY.md  BATCH_PREDICT_GUIDE.md  BATCH_PREDICT_PERFORMANCE_OPTIMIZATIONS.md  BATCH_PREDICT_UPDATE.md  BATCH_PREDICT_VERIFICATION.md  CODE_CHANGES_SUMMARY.md  COMMANDS_REFERENCE.md  COMPLETION_CHECKLIST.md  CONNECTION_POOL_FIX.md  CREATE_ADJUSTED_DAILY_CHECKLIST.md  CREATE_ADJUSTED_DAILY_OPTIMIZATION.md  CREATE_ADJUSTED_DAILY_QUICK_REF.md  CREATE_ADJUSTED_DAILY_SUMMARY.md  Cargo.toml  DAILY_INGESTION_STATUS.md  DAILY_PIPELINE_README.md  DUAL_PREDICTION_UPDATE.md  ENSEMBLE_README.md  EVALUATION_REPORT_JAN_2026.md  FEATURE_CHECKLIST.md  FEATURE_ENGINEERING_IMPLEMENTATION.md  GPU_OPTIMIZATION_SUMMARY.md  INGESTION_GUIDE.md  MEMORY_OPTIMIZATION_GUIDE.md  ML_TRADING_GUIDE.md  NULL_VALUES_FIX.md  OPTIMIZATION_SUMMARY.md  OPTION_A_IMPLEMENTATION.md  PHASE_3_COMPLETE.md  PREDICTION_TRACKING_UPDATE.md  PULLALL_MONEYFLOW_REFACTORING_VERIFICATION.md  QUICK_REFERENCE.md  SETUP_COMPLETE.md  TABLE_RENAME_SUMMARY.md  TRAINING.md  TRAINING_DATA_EXPORT_SUMMARY.md  (+28 more)
artifacts/: test_fusion.json  test_lgb.pkl  test_scaler.pkl
migrations/: 001_create_ml_training_dataset.sql  002_add_missing_index_columns.sql  002_create_stock_history.sql  003_add_five_predictive_features.sql  003_alter_daily_basic_add_dv_ratio.sql  003_create_stock_daily_adjusted.sql  004_create_stock_predictions.sql  005_create_3day_direction_for_dataset.sql  006_create_daily_basic.sql  006_create_moneyflow_ind_ths.sql  007_add_daily_basic_columns_to_ml_training_dataset.sql  008_create_moneyflow_ind_dc.sql  009_add_unique_constraint_stock_predictions.sql  010_create_trading_signals.sql  README.md  create_stock_daily.sql
scripts/: check_lookahead.sh  compare_train_versions.py  fix_next_cols.py  fuse_models.py  generate_walk_forward_splits.py  hyper_sweep.sh  inspect_data_train_csv.py  inspect_ic.py  join_features_labels.py  leakage_checks.py  lr_sweep.sh  make_seq_sample_and_shuffle.py  make_seq_shuffled_small.py  make_shuffled_sample.py  (+13 more)
(+26 files in other folders)
