[package]
name = "rust_llm_stock"
version = "0.1.0"
edition = "2024"

[features]
default = []
pytorch = ["tch"]

[lib]
name = "rust_llm_stock"
path = "src/lib.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"
required-features = ["pytorch"]

[[bin]]
name = "export_training_data"
path = "src/bin/export_training_data.rs"

[[bin]]
name = "ingest_tushare_index"
path = "src/bin/ingest_tushare_index.rs"

[[bin]]
name = "ingest_tushare_stock"
path = "src/bin/ingest_tushare_stock.rs"

[[bin]]
name = "batch_predict"
path = "src/bin/batch_predict.rs"
required-features = ["pytorch"]

[[bin]]
name = "daily_features"
path = "src/bin/daily_features.rs"

[[bin]]
name = "daily_predict"
path = "src/bin/daily_predict.rs"
required-features = ["pytorch"]

[[bin]]
name = "generate_signals"
path = "src/bin/generate_signals.rs"

[[bin]]
name = "validate_predictions"
path = "src/bin/validate_predictions.rs"

[[bin]]
name = "backtest_signals"
path = "src/bin/backtest_signals.rs"

# Gate test_pytorch behind the pytorch feature to avoid build errors when not enabled
[[bin]]
name = "test_pytorch"
path = "src/bin/test_pytorch.rs"
required-features = ["pytorch"]

[dependencies]
tch = { version = "0.14", optional = true }
tokenizers = "0.22.2"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10.0"
csv = "1.4.0"
anyhow = "1.0.100"
futures = "0.3"
num_cpus = "1.13"
yahoo_finance_api = "4.1.0"
tokio-postgres = "0.7.15"
deadpool-postgres = "0.14.1"
postgres-types = { version = "0.2.11", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.5"
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
ta = "0.5.0"
ratelimit_meter = "5.0"
dotenv = "0.15.0"
statrs = "0.16"
